Github Actions setup

--- a/.github/workflows/build_containers.yml
+++ b/.github/workflows/build_containers.yml
@@ -11,10 +11,14 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+    
+    - name: sync
+    - uses: actions/checkout@v3
+    
     - name: publish
       uses: pennsignals/publish_docker-compose@v0.2.6-rc.1
       with:
-        #version: '0.1.0' # optional
+        #version: '0.1.1' # optional
         docker_compose: 'docker-compose.yml' # required
         repo_token: "${{ secrets.GITHUB_TOKEN }}"    
 
