--- a/.github/workflows/build_containers.yml
+++ b/.github/workflows/build_containers.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     
     - name: sync
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
     
     - name: publish
       uses: pennsignals/publish_docker-compose@v0.2.6-rc.1
