--- a/.github/workflows/build_containers.yml
+++ b/.github/workflows/build_containers.yml
@@ -45,7 +45,7 @@ jobs:
       run: |
         install -m 600 -D /dev/null ~/.ssh/id_rsa
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        ssh-keyscan -H ${{ secrets.SSH_HOST }} -p {{ secrets.SSH_PORT }} > ~/.ssh/known_hosts
+        ssh-keyscan -H ${{ secrets.SSH_HOST }} -p ${{ secrets.SSH_PORT }} > ~/.ssh/known_hosts
 
     - name: version figure out
       run: |
